# eggchatter-web-app-BE

./: .gitmodules  .pr_agent.toml  README.md  pyproject.toml  pytest.ini  t.sh
.gihub/: PULL_REQUEST_TEMPLATE.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  pr_agent.yml
app/: config.py  main.py  schema.v2.json
app/.github/workflows/: ci.yml
app/core/: base.py  base_response.py  config.py  database.py  error_code.py  exceptions.py  security.py
app/db/: mongodb.py
app/models/: base.py  basemodel.py  chats.py  easter_egg.py  easter_eggs.py  friends.py  models.py  users.py
app/routers/: auth.py  users.py
app/routers/http/: auth.py  users.py
app/schemas/: auth.py  users.py
app/services/: auth.py  users.py
app/tests/: test_users.py
egg_chatter/: package.json
egg_chatter/components/: LongButton.tsx
